# Proyectos

./: README.md
agentes/trading-bot/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
agentes/trading-bot/config/: __init__.py  alpaca.py  settings.py
agentes/trading-bot/docs/: architecture.mmd
agentes/trading-bot/src/trading_bot/: __init__.py  logging_conf.py  models.py  telemetry.py
agentes/trading-bot/src/trading_bot/bot/: __init__.py  scheduler.py  trading_bot.py
agentes/trading-bot/src/trading_bot/broker/: __init__.py  alpaca_client.py  broker_interface.py  mock_broker.py  risk.py
agentes/trading-bot/src/trading_bot/screener/: __init__.py  models.py  screen.py
agentes/trading-bot/src/trading_bot/screener/engine/: __init__.py  filters.py  scoring.py
agentes/trading-bot/src/trading_bot/screener/parser/: __init__.py  planner.py
agentes/trading-bot/src/trading_bot/screener/reasoning/: __init__.py  guardrail.py  reasoner.py
agentes/trading-bot/src/trading_bot/screener/tools/: __init__.py  benchmarks.py  cache.py  fundamentals.py  retry.py  technicals.py  universe.py
agentes/trading-bot/src/trading_bot/store/: __init__.py  trade_log.py
agentes/trading-bot/tests/: conftest.py  test_alpaca_client.py  test_bot_decision.py  test_mock_broker.py  test_risk.py  test_screener.py  test_technicals.py
agentes/trading-bot/tests/fixtures/: sample_data.py
tfg/: SentimientosAgrupados(3).py  anadir_sentimiento_bolsa(5).py  analisis_sentimental(2).py  crear_tabla_bolsa(4).py  eliminartablas.py  redes_neuronales.py  (+1 more)
(+4 files in other folders)
