[project]
name = "trading-bot"
version = "0.1.0"
description = "Bot de trading demostrativo: screener agéntico (Anthropic) + Alpaca (paper)."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "alpaca-py>=0.33",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.26",
    "duckdb>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "streamlit>=1.36",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
